# freellmpool

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  README.md  config.toml.example  docker-compose.yml  pyproject.toml  server.json
.codegraph/: daemon.pid  loop-last-sync  loop-last-sync.head  loop-last-sync.iso
.github/workflows/: benchmarks.yml  ci.yml  docker.yml  pages.yml
docs/: ACCOUNTS.md  AGENTS.md  ARCHITECTURE.md  CAPACITY.md  GITHUB_DISCOVERY.md  GOOD_FIRST_ISSUES.md  INTEGRATIONS.md  MCP.md  best-free-llm-api-gateway.html  capacity-management.html  free-alternative-to-openrouter.html  free-cerebras-api.html  free-claude-api.html  free-gemini-api.html  free-groq-api.html  free-llm-api-providers-list.html  free-mistral-api.html  free-nvidia-api.html  free-openai-api-alternatives.html  freellmpool-vs-litellm-vs-openrouter.html  index.html  llms.txt  run-coding-agents-on-free-models.html  run-opencode-on-free-models.html  sitemap.xml  use-multiple-free-llm-apis.html
docs/good-first-issues/: env-keyless-providers.md
docs/promotion/: README.md  directory-submissions.md  long-form-article.md  outreach-notes.md  product-hunt.md  reddit-local-llama.md  reddit-mcp.md  reddit-metaswarm.md  reddit-open-source.md  reddit-opencode.md  reddit-targets.md  reply-bank.md  show-hn.md  social-short-posts.md
examples/: agent_openai_sdk.py
integrations/metaswarm/: README.md  freellmpool-review-adapter.sh
plugins/llm-freellmpool/: README.md  pyproject.toml
scripts/: check-counts  check_release_ready.py  demo.sh
src/freellmpool/: __init__.py  agents.py  aio.py  anthropic_shim.py  benchmark.py  cache.py  capability.py  capability_scores.json  capacity.py  catalog.py  cli.py  client.py  config.py  context.py  errors.py  healthcheck.py  key_inventory.py  mcp_server.py  metrics.py  models.py  observe.py  plugins.py  providers.toml  proxy.py  router.py  savings.py  stats.py  svg.py  tokenmax.py  toml_utils.py
src/llmbuffet/: __init__.py  cli.py  client.py  config.py  errors.py  models.py  providers.toml  proxy.py  quota.py  router.py
tests/: conftest.py  helpers.py  test_aio.py  test_anthropic.py  test_benchmark.py  test_cache.py  test_capacity.py  test_catalog.py  test_cli.py  test_client.py  test_config.py  test_config_file.py  test_context.py  test_faq.py  test_github_discovery.py  test_healthcheck.py  test_key_inventory.py  test_mcp.py  test_mcp_listings.py  test_metaswarm_integration.py  test_metrics.py  test_observe.py  test_plugins.py  test_proxy.py  test_quota.py  test_release_metadata.py  test_release_tools.py  test_router.py  test_routing.py  test_savings.py  test_security.py  test_toml_utils.py  test_transcription.py
