[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freellmpool"
version = "0.11.1"
description = "Pool the free tiers of 18 LLM providers (300+ models) behind one OpenAI-compatible endpoint. Free, zero-config, with automatic failover and quota tracking."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "0xzr" }]
keywords = [
    "llm",
    "openai",
    "proxy",
    "gateway",
    "router",
    "free",
    "groq",
    "cerebras",
    "openrouter",
    "gemini",
    "load-balancer",
    "failover",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/0xzr/freellmpool"
Repository = "https://github.com/0xzr/freellmpool"
Issues = "https://github.com/0xzr/freellmpool/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
freellmpool = "freellmpool.cli:main"
ffp = "freellmpool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/freellmpool"]

[tool.hatch.build.targets.wheel.force-include]
"src/freellmpool/providers.toml" = "freellmpool/providers.toml"
"src/freellmpool/capability_scores.json" = "freellmpool/capability_scores.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
