[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freellmpool"
version = "0.11.4"
description = "Free LLM API pool: 19 LLM providers cataloged, 235 routes, 355 cataloged chat models, keyless start when available."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "0xzr" }]
keywords = [
    "anthropic",
    "claude",
    "llm",
    "free-llm",
    "openai",
    "openai-compatible",
    "proxy",
    "gateway",
    "llm-gateway",
    "router",
    "free",
    "groq",
    "cerebras",
    "openrouter",
    "gemini",
    "mcp",
    "model-context-protocol",
    "cursor",
    "speech-to-text",
    "transcription",
    "rate-limiting",
    "load-balancer",
    "failover",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/0xzr/freellmpool"
Docs = "https://0xzr.github.io/freellmpool/"
Repository = "https://github.com/0xzr/freellmpool"
Changelog = "https://github.com/0xzr/freellmpool/blob/main/CHANGELOG.md"
Issues = "https://github.com/0xzr/freellmpool/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.0",
]

[project.scripts]
freellmpool = "freellmpool.cli:main"
ffp = "freellmpool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/freellmpool"]

[tool.hatch.build.targets.wheel.force-include]
"src/freellmpool/providers.toml" = "freellmpool/providers.toml"
"src/freellmpool/capability_scores.json" = "freellmpool/capability_scores.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
