[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-freellmpool"
version = "0.1.0"
description = "Use free LLMs in Simon Willison's llm CLI via freellmpool — pool 17 free providers, works with zero API keys."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "0xzr" }]
keywords = ["llm", "datasette", "free", "openai", "freellmpool"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "llm",
    "freellmpool>=0.5",
]

[project.urls]
Homepage = "https://github.com/0xzr/freellmpool"
Repository = "https://github.com/0xzr/freellmpool"

[project.entry-points.llm]
freellmpool = "llm_freellmpool"

[tool.hatch.build.targets.wheel]
include = ["llm_freellmpool.py"]
